--- a/feature/src/main/res/layout/activity_fullscreen.xml
+++ b/feature/src/main/res/layout/activity_fullscreen.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0099cc"
-    tools:context="com.example.hyong.koan.feature.FullscreenActivity">
+    tools:context="com.example.hyong.koan.feature.kotlinanko.FullscreenActivity">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
@@ -49,6 +49,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
                 android:text="@string/koactivity" />
+
+            <Button
+                android:id="@+id/surfaceview_button"
+                style="?metaButtonBarButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:text="@string/surfaceview_button" />
 
         </LinearLayout>
     </FrameLayout>
